--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest --detectOpenHandles",
     "build": "webpack",
     "start": "nodemon server",
-    "seed": "node database/seed.js"
+    "seed": "node database/seed.js",
+    "dataGen": "node database/dataGenScript.js"
   },
   "repository": {
     "type": "git",
