--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.8.9",
     "mongoose-type-url": "^1.0.6",
+    "newrelic": "^6.4.1",
     "nodemon": "^2.0.2",
     "pg": "^7.18.1",
     "puppeteer": "^2.1.0",
